# P6_RehabilitationRobotics

./: .gitignore  README.md  Test.py
mab_brake_chopper/: package.xml  setup.cfg  setup.py
mab_brake_chopper/launch/: brake_chopper.launch.py
mab_brake_chopper/mab_brake_chopper/: __init__.py  brake_chopper_node.py  gpio_backend.py  logic.py
mab_brake_chopper/test/: test_logic.py
mab_ros2_control/: package.xml
mab_ros2_control/config/: mab_three_axis.controllers.yaml
mab_ros2_control/docs/: md_registers.md
mab_ros2_control/include/mab_ros2_control/: mab_system.hpp
mab_ros2_control/launch/: mab_three_axis_bringup.launch.py
mab_ros2_control/scripts/: maintenance_fast_test.sh  setup_realtime_pi.sh
mab_ros2_control/src/: mab_system.cpp
mab_ros2_control/urdf/: mab_three_axis.default.urdf  mab_three_axis.urdf.xacro
src/IK/: CMakeLists.txt  package.xml
src/IK/src/: orientation_ik_3r_node.cpp
src/candle_ros2/: .clang-format  CMakeLists.txt  README.md  package.xml
src/candle_ros2/CANdle-SDK/: .clangd  .gitignore  CMakeLists.txt  README.md  git_func.cmake  pyproject.toml
src/candle_ros2/CANdle-SDK/.devcontainer/: devcontainer.json
src/candle_ros2/CANdle-SDK/.github/workflows/: cleanup_gh_artifacts.yml  mab_candle_sdk_workflow.yml
src/candle_ros2/CANdle-SDK/build-test/examples/: md_example_latency  md_latency_cli
src/candle_ros2/CANdle-SDK/candlelib/: CMakeLists.txt  Doxyfile  README.md
src/candle_ros2/CANdle-SDK/candlelib/include/: candlelib.hpp  crc.hpp
src/candle_ros2/CANdle-SDK/candlelib/src/: crc.cpp
src/candle_ros2/CANdle-SDK/candlelib/test/: pds_protocol_test.cpp
src/candle_ros2/CANdle-SDK/candletool/: CMakeLists.txt  LICENSE  README.md
src/candle_ros2/CANdle-SDK/candletool/doc/: candletool.drawio
src/candle_ros2/CANdle-SDK/candletool/include/: canLoader.hpp  candle_cli.hpp  configHelpers.hpp  iLoader.hpp  mabFileParser.hpp  mab_crc.hpp  md_cfg_map.hpp  md_cli.hpp  pds_cli.hpp  utilities.hpp
src/candle_ros2/CANdle-SDK/candletool/launch/: buildAndTest.bash
src/candle_ros2/CANdle-SDK/candletool/src/: canLoader.cpp  candle_cli.cpp  mabFileParser.cpp  mab_crc.cpp  main.cpp  md_cli.cpp  pds_cli.cpp  uploader.cpp  utilities.cpp
src/candle_ros2/CANdle-SDK/candletool/template_package/: postinst
src/candle_ros2/CANdle-SDK/cmake/: linux.arm64.toolchain.cmake  linux.armhf.toolchain.cmake  windows.x86_64.gcc.toolchain.cmake
src/candle_ros2/CANdle-SDK/commons/: CMakeLists.txt
src/candle_ros2/CANdle-SDK/commons/candle_frame_dto_test/: candle_frame_dto_test.cpp
src/candle_ros2/CANdle-SDK/commons/logger/: logger.cpp  logger.hpp  logger_test.cpp
src/candle_ros2/CANdle-SDK/commons/shared_data/: CMakeLists.txt  candle_frame_dto.hpp  mab_def.hpp  mab_types.hpp  manufacturer_data.hpp  md_types.hpp  pds_properties.hpp  pds_types.hpp
src/candle_ros2/CANdle-SDK/commons/unit_test_runner/: CMakeLists.txt
src/candle_ros2/CANdle-SDK/examples/: CMakeLists.txt
src/candle_ros2/CANdle-SDK/examples/cpp/: app_template.cpp  md_example_async_api.cpp  md_example_diagnostics.cpp  md_example_dual_chanel.cpp  md_example_impedance.cpp  md_example_latency.cpp  md_latency_cli.cpp  md_register_access.cpp  pds_example_braking_resistor.cpp  pds_example_isolated_converter.cpp  pds_example_power_stage.cpp  (+1 more)
src/candle_ros2/CANdle-SDK/launch/: buildForLinux.sh  buildForWindows.bat  buildForWindows.sh  install_rules.sh  pythonBuildLocal.sh  pythonBuildOnWin.ps1  pythonBuildWheel.sh  runDockerForLinux86-64.sh  runDockerForWindows.sh  run_all_tests.sh
src/candle_ros2/CANdle-SDK/pycandle/: CMakeLists.txt  README.md  generate_pybind_module_registers.py  release.sh  test_release.sh
src/candle_ros2/include/candle_ros2/: md_node.hpp  pds_node.hpp
src/candle_ros2/launch/: both_launch.py  md_node_launch.py  pds_node_launch.py
src/candle_ros2/msg/: BrakeResistorData.msg  ControlModuleData.msg  ImpedanceCmd.msg  IsolatedConverterData.msg  MotionCmd.msg  Pid.msg  PositionPidCmd.msg  PowerStageData.msg  VelocityPidCmd.msg
src/candle_ros2/src/: candle_container.cpp  md_node.cpp  pds_node.cpp
src/candle_ros2/src/pds_modules/: brake_resistor_ros.cpp  control_module_ros.cpp  isolated_converter_ros.cpp  power_stage_ros.cpp
src/candle_ros2/srv/: AddDevices.srv  Generic.srv  GenericPds.srv  SetLimits.srv  SetMode.srv
src/ft300_ros2/: package.xml  setup.cfg  setup.py
src/ft300_ros2/config/: ft300_calibration.json
src/ft300_ros2/ft300_ros2/: ft300_calibration_node.py  ft300_common.py  ft300_wrench_node.py
src/mab_rehab/: CMakeLists.txt  mab_rehab.xml  package.xml
src/mab_rehab/config/: mab_three_axis.controllers.yaml  pid_tuning.yaml  safety_limits.yaml  startup_reference.yaml
src/mab_rehab/config/motors/: joint_1.cfg  joint_2.cfg  joint_3.cfg
src/mab_rehab/include/mab_rehab/: mab_system.hpp
src/mab_rehab/launch/: mab_three_axis_bringup.launch.py
src/mab_rehab/src/: mab_system.cpp
src/mab_rehab/src/config/: hardware_config.cpp  joint_config.cpp
src/mab_rehab/src/maintenance/: controller_switcher.cpp  maintenance_services.cpp  md_config_uploader.cpp
src/mab_rehab/src/power/: pds_manager.cpp
src/mab_rehab/src/rt/: health_monitor.cpp  maintenance_gate.cpp  mode_switch_worker.cpp
src/mab_rehab/src/transport/: candle_transport.cpp  md_drive.cpp
src/mab_rehab/srv/: RunDriveTests.srv  SetTorqueBandwidth.srv
src/mab_rehab/urdf/: mab_three_axis.urdf.xacro
src/mab_ros2_control/: CMakeLists.txt  README.md  mab_ros2_control.xml
src/mab_ros2_control/config/: mab_three_axis.controllers.yaml
src/mab_ros2_control/docs/: md_registers.md  realtime_pi.md
src/mab_ros2_control/include/mab_ros2_control/: mab_system.hpp
src/mab_ros2_control/launch/: mab_three_axis_bringup.launch.py
src/mab_ros2_control/scripts/: maintenance_fast_test.sh
src/mab_ros2_control/src/: mab_system copy.cpp  mab_system.cpp
src/mab_ros2_control/srv/: SetTorqueBandwidth.srv
src/mab_ros2_control/urdf/: mab_three_axis.default.urdf  mab_three_axis.urdf.xacro
src/rehab_candle_control/: package.xml  setup.cfg  setup.py
src/rehab_candle_control/launch/: rehab_bringup.launch.py
(+156 files in other folders)
