<?xml version="1.0"?>
<package format="3">
  <name>mab_brake_chopper</name>
  <version>0.1.0</version>
  <description>ROS 2 brake chopper control driven by PDS bus voltage telemetry.</description>
  <maintainer email="rehab@example.com">rehab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>candle_ros2</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
