<?xml version="1.0"?>
<package format="3">
  <name>ft300_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 driver and calibration tools for Robotiq FT300</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>