<?xml version="1.0"?>
<package format="3">
  <name>rehab_candle_control</name>
  <version>0.1.0</version>
  <description>Launch and interactive speed controller for MAB MD drives and PDS.</description>
  <maintainer email="rehab@example.com">rehab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>candle_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
